@@ -37,6 +37,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - `prospector`: prospector tool in fort mode is now available. embark prospect is not yet available and is disabled at this time.
 
 ## Fixes
+- `tailor` now properly discriminates between dyed and undyed cloth and no longer defaults to using adamantine
 
 ## Misc Improvements
 
